keycloak/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cicd
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: cicd
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
